--- a/android/OneToOneScreenSharingSample/app/build.gradle
+++ b/android/OneToOneScreenSharingSample/app/build.gradle
@@ -36,5 +36,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.android.support:design:23.3.0'
     compile 'org.codehaus.jackson:jackson-mapper-asl:1.9.13'
-    compile 'com.opentok.android:opentok-screensharing-annotations:1.0.0'
+    compile 'com.opentok.android:opentok-screensharing-annotations:1.1.0'
+    //compile project(':annotations-kit')
+    //compile project(':screensharing-acc-pack-kit')
 }
