--- a/android/OneToOneScreenSharingSample/app/src/main/AndroidManifest.xml
+++ b/android/OneToOneScreenSharingSample/app/src/main/AndroidManifest.xml
@@ -10,9 +10,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-
 
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
@@ -21,6 +18,7 @@
         android:allowBackup="true"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
+        tools:replace="android:theme"
         android:icon="@mipmap/ic_launcher">
 
         <activity
