--- a/ios/OneToOneScreenShareSample/Podfile
+++ b/ios/OneToOneScreenShareSample/Podfile
@@ -1,7 +1,7 @@
 platform :ios, '8.0'
 
 target 'OneToOneScreenShareSample' do
-  pod 'OTScreenShareKit'
+  pod 'OTScreenShareKit', '~> 1.1.2'
   pod 'OTAnnotationKit', '~> 1.1.0-beta'
   pod 'SVProgressHUD'
 end
