--- a/android/OneToOneScreenSharingSample/app/build.gradle
+++ b/android/OneToOneScreenSharingSample/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    compileSdkVersion 24
+    buildToolsVersion "24.0.3"
 
     defaultConfig {
         applicationId "com.tokbox.android.screensharingsample"
         minSdkVersion 16
-        targetSdkVersion 23
+        targetSdkVersion 24
         versionCode 1
         versionName "1.1.0"
         vectorDrawables.useSupportLibrary = true
@@ -22,6 +22,7 @@ android {
 
     packagingOptions {
         exclude 'META-INF/ASL2.0'
+        exclude 'META-INF/LICENSE'
     }
 
     lintOptions {
@@ -31,10 +32,11 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.3.0'
-    compile 'com.android.support:design:23.3.0'
+    compile 'com.android.support:appcompat-v7:24+'
+    compile 'com.android.support:design:24+'
     compile 'org.codehaus.jackson:jackson-mapper-asl:1.9.13'
-    compile 'com.opentok.android:opentok-screensharing-annotations:1.1.+'
+    compile 'com.opentok.android:opentok-screensharing-annotations:2.0.+'
+
 }
