--- a/android/OneToOneScreenSharingSample/app/build.gradle
+++ b/android/OneToOneScreenSharingSample/app/build.gradle
@@ -38,5 +38,5 @@ dependencies {
     compile 'com.android.support:design:25.+'
     compile 'org.codehaus.jackson:jackson-mapper-asl:1.9.13'
     compile 'com.opentok.android:opentok-accelerator-core:1.0.0'
-    compile 'com.opentok.android:opentok-annotations:2.0.0'
+    compile 'com.opentok.android:opentok-accelerator-annotation:2.0.0'
 }
