--- a/android/OneToOneScreenSharingSample/app/build.gradle
+++ b/android/OneToOneScreenSharingSample/app/build.gradle
@@ -37,6 +37,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.+'
     compile 'com.android.support:design:25.+'
     compile 'org.codehaus.jackson:jackson-mapper-asl:1.9.13'
-    compile 'com.opentok.android:opentok-accelerator-core:1.0.0'
-    compile 'com.opentok.android:opentok-accelerator-annotation:2.0.0'
+    compile 'com.opentok.android:opentok-accelerator-core:1.0.+'
+    compile 'com.opentok.android:opentok-accelerator-annotation:1.0.0'
 }
