--- a/JS/sample-app/package.json
+++ b/JS/sample-app/package.json
@@ -1,21 +1,25 @@
 {
-  "name": "one-to-one-sample",
-  "version": "1.0.0",
-  "description": "One to One sample app",
+  "name": "one-to-one-screensharing-annotations-sample",
+  "version": "1.0.4",
+  "description": "One to One screensharing with annotations sample app",
   "main": "server.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/opentok/one-to-one-sample-apps"
+    "url": "https://github.com/opentok/one-to-one-screen-annotations-sample-apps"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": ". ../build.sh",
     "start": "node server.js"
   },
   "author": "adrice727@gmail.com",
   "license": "MIT",
   "dependencies": {
-    "ejs": "^2.4.2",
-    "express": "^4.13.4",
-    "opentok": "^2.3.2"
+    "express": "^4.14.1",
+    "body-parser": "^1.16.0",
+    "opentok-accelerator-core": "*",
+    "opentok-annotation": "^2.0.44",
+    "opentok-screen-sharing": "^1.0.24",
+    "opentok-solutions-logging": "^1.0.7"
   }
 }
